2010-08-17  Glenn Morris  <rgm@gnu.org>

	* calendar/icalendar.el (icalendar--convert-recurring-to-diary):
	Fix format call.

2010-08-17  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-make-symbolic-link): Flush file
	properties.
	(tramp-handle-process-file): Call the program in a subshell, in
	order to preserve working directory.
	(tramp-action-password): Hide password prompt before next run.
	(tramp-process-actions): Widen connection buffer for the trace.

2010-08-16  Deniz Dogan  <deniz.a.m.dogan@gmail.com>

	* net/rcirc.el (rcirc-log-process-buffers): New option.
	(rcirc-print): Use it.
	(rcirc-generate-log-filename): New function.
	(rcirc-log-filename-function): Change default to
	rcirc-generate-log-filename (Bug#6828).

2010-08-16  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (deactivate-mark): If select-active-regions is `only',
	only set selection for temporarily active regions.

	* cus-start.el: Change defcustom for select-active-regions.

2010-08-15  Chong Yidong  <cyd@stupidchicken.com>

	* mouse.el (mouse--drag-set-mark-and-point): New function.
	(mouse-drag-track): Use LOCATION arg to push-mark.  Use
	mouse--drag-set-mark-and-point to take click-count into
	consideration when updating point and mark (Bug#6840).

2010-08-15  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Give the Ruby rule a lower priority than Gnu (Bug#6778).

2010-08-14  Štěpán Němec  <stepnem@gmail.com>  (tiny change)

	* font-lock.el (lisp-font-lock-keywords-2): Add
	combine-after-change-calls, condition-case-no-debug,
	with-demoted-errors, and with-silent-modifications (Bug#6025).

2010-08-14  Kevin Ryde  <user42@zip.com.au>

	* emacs-lisp/copyright.el (copyright-update-year)
	(copyright-update): Temporary switch-to-buffer to ensure the
	buffer change being queried is visible (Bug#5394).

2010-08-14  Tom Tromey  <tromey@redhat.com>

	* progmodes/etags.el (tags-file-name): Mark safe if stringp